tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_metaprogramming_errors_if_macros_inject_functions_with_name_collisions/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Duplicate definitions of function with name foo found
   ┌─ src/main.nr:4:16
   │
 4 │             fn foo() {}
   │                ---
   │                │
   │                Second function found here
   │                First function found here
   ·
11 │     #[make_colliding_functions]
   │     --------------------------- While running this function attribute
   │

Aborting due to 1 previous error
